[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AgentRunnerContainer"
version = "0.2.0"
description = "Run a local model in a vLLM container and serve it on a specified port"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
agent-runner = "agentrunner.cli:app"

[tool.hatch.build.targets.wheel]
include = ["src/agentrunner/**"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["agentrunner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
