[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllmd"
version = "0.3.1"
description = "Run local models via vLLM in Docker containers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
vllmd = "vllmd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vllmd"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["UP045"]

[tool.ruff.lint.isort]
known-first-party = ["vllmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
